spacing fixed, move buttons next

--- a/public/screen.css
+++ b/public/screen.css
@@ -151,6 +151,7 @@ main > img {
   position: relative;
   border-radius: 5%;
   padding: 0.5%;
+  margin: -14px;
 }
 
 /* Everything below here is fine ignore it */
